@@ -67,7 +67,7 @@ P['chat'] = {
 	['hyperlinkHover'] = true,
 	['throttleInterval'] = 45,
 	['scrollDownInterval'] = 15,
-	['minWhisperLevel'] = 5,
+	['minWhisperLevel'] = 4,
 }
 
 --ClassTimers
