@@ -9,7 +9,7 @@
 ## X-Curse-Project-Name: oUF_DebuffHighlight
 ## X-Curse-Project-ID: o-uf_debuff-highlight
 ## X-Curse-Repository-ID: wow/o-uf_debuff-highlight/mainline
-## X-Curse-Packaged-Version: v3.2b-70-g79953b3
+## X-Curse-Packaged-Version: v3.2b-71-g33d6047
 ## X-Curse-Project-Name: ElvUI
 ## X-Curse-Project-ID: elvui
 ## X-Curse-Repository-ID: wow/elvui/mainline
