@@ -35,3 +35,4 @@
 *Fix achievement points not displaying on achievement window due to skin.
 *Character frame should no longer be skinned when the misc skin box is checked and the character frame skin is disabled.
 *Fix issue with unitframe combat fade not working as intended.
+*Fix "Loop in Gettable" lua error for the power bar when blizzards function returns a nil value.
